USD will fail to export without file extension #97947

Closed
opened 2022-05-08 01:28:05 +02:00 by Andrew Price · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: None

Short description of error
Unless you add .usd, .usda, .usdc in the filename description it will fail to export

Exact steps for others to reproduce the error
With default cube selected, File>Export>USD
Type "cube" into the file name
It will then say

USD Export: unable to find suitable USD plugin to write

Try it again, but this time type "cube.usd" and it will save correctly.

The user expected behavior is that it would work like the file save window, and add the extension automatically. Leading to confusion from users .

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: None **Short description of error** Unless you add .usd, .usda, .usdc in the filename description it will fail to export **Exact steps for others to reproduce the error** With default cube selected, File>Export>USD Type "cube" into the file name It will then say > USD Export: unable to find suitable USD plugin to write <filepath> Try it again, but this time type "cube.usd" and it will save correctly. The user expected behavior is that it would work like the file save window, and add the extension automatically. Leading to [confusion from users ](https://blender.stackexchange.com/questions/259402/usd-export-unable-to-find-suitable-usd-plugin-to-write#_=_).
Author

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2022-05-09 09:40:36 +02:00
Member

The user expected behavior is that it would work like the file save window, and add the extension automatically

Well... the question is which extension to use (usda / usdc are different ways to write the file, ascii or binary).
But it probably makes sense to add .usdc (since this is our default) to the name if none is specified.
Will confirm, this is just inconsistent with any other format in blender.
Will check on this later.

> The user expected behavior is that it would work like the file save window, and add the extension automatically Well... the question is **which** extension to use (usda / usdc are different ways to write the file, ascii or binary). But it probably makes sense to add .usdc (since this is our default) to the name if none is specified. Will confirm, this is just inconsistent with any other format in blender. Will check on this later.

This issue was referenced by 06a7afb528

This issue was referenced by 06a7afb528d8bdbbed1c07abfadc83fc95682ec4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:48 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97947
No description provided.